sizing for cat image

--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
 
         <main>
             <h1>About Me</h1>
-            <img src="Image.png" />
+            <img src="./assets/Leia.jpg" , class="cat" />
             <p>My name is Andrew. This photo is of my cat, Leia.</p>
+            <br />
+            <p2>These are three facts about me!</p2>
+            <ul>
+                <li>I was born in Phoenix, Arizona</li>
+                <li>I have two cats</li>
+                <li>I moved to Portland, Oregon two years ago</li>
+            </ul>
         </main>
     </body>
 </html>
