resizing cat photo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
         <main>
             <h1>About Me</h1>
-            <img src="./assets/Leia.jpg" , class="cat" />
+            <div class="cat">
+                <img src="./assets/Leia.jpg" />
+            </div>
             <p>My name is Andrew. This photo is of my cat, Leia.</p>
             <br />
             <p2>These are three facts about me!</p2>
