resizing cat image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <main>
             <h1>About Me</h1>
             <div class="cat">
-                <img src="./assets/Leia.jpg" />
+                <img src="./assets/Leia.jpg" width="200px" height="200px" />
             </div>
             <p>My name is Andrew. This photo is of my cat, Leia.</p>
             <br />
